Fixed Horizontal scroll bug on mobile

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,9 +1,13 @@
 /* Disables side scroll */
 body {
+    position: relative;
     width:100%;
     height:100%;
-    overflow: hidden;
+    overflow-x: hidden;
     white-space: nowrap;
+    -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+        box-sizing: border-box;
 }
 
 :root {
@@ -58,6 +62,10 @@ body {
 }
 
 .logo {
+    width: 100%;
+    left: 0;
+    text-align: left;
+    display: inline-block;
     opacity: 1;
     color: white;
     font-size: 24px;
@@ -65,6 +73,10 @@ body {
     transform: translate(36px, -6px);
 
     transition: all 0.5s ease-out;
+}
+
+.logo-img {
+
 }
 
 .logo.active {
@@ -129,7 +141,8 @@ body {
 
     .btn {
         margin-left: 0;
-        margin-top: 36px;
+        margin-top: 64px;
+        padding: 1rem 20%;
     }
 
     .top-bar.active {
